# retrodesk

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  Makefile.djgpp  README.md  ROADMAP.md  SESSION_SUMMARY.md
.github/: .win32-storage-validation-trigger
.github/workflows/: agent-apply-djgpp-storage.yml  agent-apply-msvc-quality.yml  agent-fix-djgpp-storage.yml  agent-restore-render-include.yml  agent-win32-static-analysis-fix.yml  agent-win32-storage-alias-fix.yml  agent-win32-storage-diagnostic.yml  agent-win32-storage-patch.yml  agent-windows-build-diagnostic.yml  apply-app-service-tick.yml  apply-filemanager-key-fix.yml  ci.yml  diagnose-filemanager.yml  diagnose-safe-shutdown-linux.yml  dos.yml  materialize-core-event-close-routing.yml  materialize-notepad-native-ux.yml  materialize-notepad-pr.yml  materialize-owned-clipboard.yml  materialize-portable-storage-contract.yml  materialize-safe-global-shutdown.yml  materialize-sanitizer-baseline.yml  notepad-close-bootstrap.yml  notepad-close-pr-bootstrap.yml  notepad-find-bootstrap.yml  notepad-history-bootstrap.yml  notepad-selection-bootstrap.yml  notepad-word-wrap-bootstrap.yml  taskbar-bootstrap.yml  text-buffer-utf8-bootstrap.yml  utf8-storage-bootstrap.yml
docs/: AGENTS.md  APP_RUNTIME.md  ARCHITECTURE.md  BUILD_SYSTEM.md  BUILTIN_APPS.md  CODE_STANDARDS.md  CORE_HARDENING_PLAN.md  CORE_STABILITY_AUDIT_2026-07.md  FOUNDATION_PRINCIPLES.md  INDEX.md  KEYBOARD_SHORTCUTS.md  KNOWN_ISSUES.md  PORTABILITY.md  PROJECT_STATUS.md  RECOVERY.md  RELEASE_0.1_CHECKLIST.md  RETROCORE_SPEC.md  RETROTUI_GAP.md  ROADMAP.md  STORAGE.md  TECH_DEBT_POLICY.md  TESTING.md  retrocore-spec-integration.md
docs/adr/: ADR-0001-cmake-is-canonical.md  ADR-0002-tiered-platform-support.md  ADR-0003-core-does-not-expose-curses.md
scripts/: apply_app_service_tick.py  apply_notepad_close_tests.py  apply_notepad_find.py  apply_notepad_history_tests.py  apply_notepad_selection_clipboard.py  apply_notepad_word_wrap.py  apply_text_buffer_utf8_tests.py  apply_utf8_storage_port.py  apply_win32_static_analysis_guard.py  apply_win32_storage_alias_fix.py  apply_win32_storage_patch.py  build_djgpp_ci.sh  check_djgpp_sources.py  check_test_oracles.py  compare_ctest_manifests.py  fix_notepad_find_apply.py  fix_notepad_selection_apply.py  fix_word_wrap_test_helper.py  run_dosbox_smoke.sh  run_notepad_find_ci.sh  run_notepad_selection_ci.sh  run_notepad_word_wrap_ci.sh
src/: main.c
src/app/: app_runtime.c  app_runtime.h
src/apps/: apps.c  apps.h  apps_internal.h  filemanager_app.c  notepad_app.c  terminal_app.c
src/core/: checked_size.h  cli.c  cli.h  clipboard.c  clipboard.h  compat.h  desktop.c  desktop.h  desktop_chrome.c  desktop_chrome.h  desktop_window_mode.c  desktop_window_mode.h  event.h  key_chord.c  key_chord.h  utf8.c  utf8.h
src/platform/: platform.c  platform.h  platform_backend_internal.h  platform_curses.c  platform_internal.h  platform_tty_raw.c  tty_decoder.c  tty_decoder.h
src/render/: ansi_renderer.c  ansi_renderer.h  render.c  render.h
src/storage/: retro_fs.h  retro_fs_djgpp.c  retro_fs_posix.c  retro_fs_win32.c
src/ui/: button.c  button.h  dialog.c  dialog.h  launcher_bridge.h  launcher_menu.h  menu_bar.c  menu_bar.h  progress_bar.c  progress_bar.h  scroll_list.c  scroll_list.h  statusbar.c  statusbar.h  tab.c  tab.h  taskbar_window_bridge.h  text_buffer.c  text_buffer.h  text_input.c  text_input.h  theme.c  theme.h  theme_surface.h  window_maximize_bridge.h  window_mode_bridge.h  window_mode_hud.h
src/wm/: window_manager.c  window_manager.h  window_maximize.h
tests/: ansi_renderer_diff_test.c  app_registry_test.c  button_test.c  cli_parse_test.c  clipboard_test.c  desktop_runtime_test.c  dialog_test.c  draw_list_contract_test.c  key_chord_test.c  menu_bar_test.c  platform_features_test.c  progress_bar_test.c  retrocore_event_fixture_test.c  scroll_list_test.c  statusbar_drawlist_test.c  storage_djgpp_test.c  storage_test.c  storage_win32_test.c  tab_test.c  test_harness.h  text_buffer_test.c  text_input_test.c  theme_catalog_test.c  tty_decoder_test.c  utf8_test.c  wm_event_replay_test.c  wm_render_stub.c
tools/: agent_apply_msvc_quality_patch.py  finalize_core_event_close_routing.py  fix_fixture_shutdown_oracles.py  materialize_core_event_close_routing.py  materialize_owned_clipboard.py  materialize_portable_storage_contract.py  materialize_safe_global_shutdown.py  materialize_sanitizer_baseline.py  repair_safe_shutdown_materializer.py  repair_sanitizer_materializer.py
